--- a/init/ueventd.qcom.rc
+++ b/init/ueventd.qcom.rc
@@ -528,6 +528,7 @@ subsystem mem_buf_vm
 /sys/class/graphics/fb0     msm_cmd_autorefresh_en   0664    system  graphics
 
 /sys/devices/platform/soc/ae00000.qcom,mdss_mdp power/control 0664 system graphics
+/sys/devices/platform/soc/9800000.qcom,mdss_mdp power/control 0664 system graphics
 
 #asm330 sensor
 #common sensors files
